// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/SuiteHeader App switcher (no apps) 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "background": "white",
          "width": "15rem",
        }
      }
    >
      <ul
        className="iot--suite-header-app-switcher"
      >
        <li
          className="iot--suite-header-app-switcher--nav-link"
        >
          <a
            href="https://www.ibm.com"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.7 12.3L2.9 8.5 15 8.5 15 7.5 2.9 7.5 6.7 3.7 6 3 1 8 6 13z"
              />
            </svg>
            All applications
          </a>
        </li>
        <div
          className="iot--suite-header-app-switcher--no-app"
        >
          <div
            className="bee-icon-container"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={32}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
              />
            </svg>
            <div
              className="bee-shadow"
            />
          </div>
          <span>
            Contact your administrator to request application access.
          </span>
          <a
            href="https://www.ibm.com"
          >
            Learn more
          </a>
        </div>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/SuiteHeader App switcher 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "background": "white",
          "width": "15rem",
        }
      }
    >
      <ul
        className="iot--suite-header-app-switcher"
      >
        <li
          className="iot--suite-header-app-switcher--nav-link"
        >
          <a
            href="https://www.ibm.com"
          >
            <svg
              aria-hidden={true}
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.7 12.3L2.9 8.5 15 8.5 15 7.5 2.9 7.5 6.7 3.7 6 3 1 8 6 13z"
              />
            </svg>
            All applications
          </a>
        </li>
        <li
          className="iot--suite-header-app-switcher--app-link"
        >
          <a
            href="https://www.ibm.com"
          >
            Monitor
          </a>
        </li>
        <li
          className="iot--suite-header-app-switcher--app-link"
        >
          <a
            href="https://www.ibm.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Health
          </a>
        </li>
      </ul>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/SuiteHeader Data hook 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <button
        className="iot--btn bx--btn bx--btn--primary bx--btn--disabled"
        disabled={true}
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          aria-atomic="true"
          aria-labelledby="loading-id-7"
          aria-live="assertive"
          className="bx--loading bx--loading--small"
        >
          <label
            className="bx--visually-hidden"
            id="loading-id-7"
          >
            Active loading indicator
          </label>
          <svg
            className="bx--loading__svg"
            viewBox="-75 -75 150 150"
          >
            <title>
              Active loading indicator
            </title>
            <circle
              className="bx--loading__background"
              cx="0"
              cy="0"
              r="26.8125"
            />
            <circle
              className="bx--loading__stroke"
              cx="0"
              cy="0"
              r="26.8125"
            />
          </svg>
        </div>
        Refresh
      </button>
      <br />
      <div
        className="bx--snippet bx--snippet--multi"
      >
        <div
          aria-label="code-snippet"
          className="bx--snippet-container"
          role={null}
          tabIndex={null}
        >
          <code>
            <pre>
              {
  "user": {},
  "workspaces": {},
  "eamConfig": {},
  "routes": {
    "profile": null,
    "navigator": null,
    "admin": null,
    "logout": null,
    "help": {
      "about": null,
      "documentation": null,
      "whatsNew": null,
      "requestEnhancement": null,
      "support": null,
      "gettingStarted": null
    },
    "applications": {}
  }
}
            </pre>
          </code>
        </div>
        <button
          aria-label="Copy to clipboard"
          aria-live="polite"
          className="bx--copy-btn"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          title="Copy to clipboard"
          type="button"
        >
          <svg
            aria-hidden={true}
            className="bx--snippet__icon"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M28,10V28H10V10H28m0-2H10a2,2,0,0,0-2,2V28a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V10a2,2,0,0,0-2-2Z"
            />
            <path
              d="M4,18H2V4A2,2,0,0,1,4,2H18V4H4Z"
            />
          </svg>
          <span
            className="bx--assistive-text bx--copy-btn__feedback"
          >
            Copied!
          </span>
        </button>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/SuiteHeader Header 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bx--modal bx--modal-tall"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="presentation"
    >
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
      <div
        aria-label="Do you wish to log out?"
        aria-modal="true"
        className="bx--modal-container"
        role="dialog"
        tabIndex="-1"
      >
        <div
          className="bx--modal-header"
        >
          
          <h3
            className="bx--modal-header__heading"
            id="bx--modal-header__heading--modal-1"
          >
            Do you wish to log out?
          </h3>
          <button
            aria-label="Close"
            className="bx--modal-close"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            <svg
              aria-label="Close"
              className="bx--modal-close__icon"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
        <div
          aria-labelledby="bx--modal-header__heading--modal-1"
          className="bx--modal-content"
        >
          You are logged in to undefined as Admin User.  Logging out also logs you out of each application that is open in the same browser.  To ensure a secure log out, close all open browser windows.
        </div>
        <div
          className="bx--modal-footer"
        >
          <button
            className="bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Cancel
          </button>
          <button
            className="bx--btn bx--btn--primary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Log out
          </button>
        </div>
      </div>
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
    </div>
    <div>
      <header
        aria-label="main header"
        className="bx--header iot--suite-header"
      >
        <a
          className="bx--skip-to-content"
          href="#main-content"
          tabIndex="0"
        >
          Skip to main content
        </a>
        <a
          className="bx--header__name"
          href="https://www.ibm.com"
        >
          <span
            className="bx--header__name--prefix"
          >
            IBM
          </span>
           
          Application Suite
          <div
            className="iot--header__subtitle"
          >
            Application Name
          </div>
        </a>
        <div
          className="bx--header__global"
        >
          <button
            aria-label="Administration"
            className="bx--header-action-btn admin-icon bx--header__action"
            onClick={[Function]}
            type="button"
          >
            <svg
              aria-hidden={true}
              data-testid="admin-icon"
              description="Settings"
              fill="white"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M27,16.76c0-.25,0-.5,0-.76s0-.51,0-.77l1.92-1.68A2,2,0,0,0,29.3,11L26.94,7a2,2,0,0,0-1.73-1,2,2,0,0,0-.64.1l-2.43.82a11.35,11.35,0,0,0-1.31-.75l-.51-2.52a2,2,0,0,0-2-1.61H13.64a2,2,0,0,0-2,1.61l-.51,2.52a11.48,11.48,0,0,0-1.32.75L7.43,6.06A2,2,0,0,0,6.79,6,2,2,0,0,0,5.06,7L2.7,11a2,2,0,0,0,.41,2.51L5,15.24c0,.25,0,.5,0,.76s0,.51,0,.77L3.11,18.45A2,2,0,0,0,2.7,21L5.06,25a2,2,0,0,0,1.73,1,2,2,0,0,0,.64-.1l2.43-.82a11.35,11.35,0,0,0,1.31.75l.51,2.52a2,2,0,0,0,2,1.61h4.72a2,2,0,0,0,2-1.61l.51-2.52a11.48,11.48,0,0,0,1.32-.75l2.42.82a2,2,0,0,0,.64.1,2,2,0,0,0,1.73-1L29.3,21a2,2,0,0,0-.41-2.51ZM25.21,24l-3.43-1.16a8.86,8.86,0,0,1-2.71,1.57L18.36,28H13.64l-.71-3.55a9.36,9.36,0,0,1-2.7-1.57L6.79,24,4.43,20l2.72-2.4a8.9,8.9,0,0,1,0-3.13L4.43,12,6.79,8l3.43,1.16a8.86,8.86,0,0,1,2.71-1.57L13.64,4h4.72l.71,3.55a9.36,9.36,0,0,1,2.7,1.57L25.21,8,27.57,12l-2.72,2.4a8.9,8.9,0,0,1,0,3.13L27.57,20Z"
              />
              <path
                d="M16,22a6,6,0,1,1,6-6A5.94,5.94,0,0,1,16,22Zm0-10a3.91,3.91,0,0,0-4,4,3.91,3.91,0,0,0,4,4,3.91,3.91,0,0,0,4-4A3.91,3.91,0,0,0,16,12Z"
              />
            </svg>
          </button>
          <div
            className="bx--header__submenu bx--header-action-btn action-btn__group"
            data-testid="action-btn__group"
            onBlur={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="bx--header__submenu bx--header-action-btn"
            >
              <a
                aria-expanded={false}
                aria-haspopup="menu"
                aria-label="Help"
                className="bx--header__menu-item bx--header__menu-title"
                data-testid="menuitem"
                href=""
                onClick={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  description="Help"
                  fill="white"
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                  />
                  <circle
                    cx="16"
                    cy="23.5"
                    r="1.5"
                  />
                  <path
                    d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"
                  />
                </svg>
              </a>
              <ul
                aria-label="Help"
                className="bx--header__menu"
                role="menu"
              >
                <li>
                  <a
                    className="bx--header__menu-item"
                    href="https://www.ibm.com"
                    tabIndex={0}
                    target="_blank"
                    title="What's new"
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      What's new
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="bx--header__menu-item"
                    href="https://www.ibm.com"
                    tabIndex={0}
                    target="_blank"
                    title="Getting started"
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      Getting started
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="bx--header__menu-item"
                    href="https://www.ibm.com"
                    tabIndex={0}
                    target="_blank"
                    title="Documentation"
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      Documentation
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="bx--header__menu-item"
                    href="https://www.ibm.com"
                    tabIndex={0}
                    target="_blank"
                    title="Request enhancement"
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      Request enhancement
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="bx--header__menu-item"
                    href="https://www.ibm.com"
                    tabIndex={0}
                    target="_blank"
                    title="Support"
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      Support
                    </span>
                  </a>
                </li>
                <li>
                  <a
                    className="bx--header__menu-item"
                    href="https://www.ibm.com"
                    tabIndex={0}
                    target="_self"
                    title="About"
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      About
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="bx--header__submenu bx--header-action-btn action-btn__group"
            data-testid="action-btn__group"
            onBlur={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="bx--header__submenu bx--header-action-btn"
            >
              <a
                aria-expanded={false}
                aria-haspopup="menu"
                aria-label="user"
                className="bx--header__menu-item bx--header__menu-title"
                data-testid="menuitem"
                href=""
                onClick={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <svg
                  aria-hidden={true}
                  data-cy="userIcon"
                  description="User"
                  fill="white"
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2ZM10,26.38v-2A3.22,3.22,0,0,1,13,21h6a3.22,3.22,0,0,1,3,3.39v2a11.92,11.92,0,0,1-12,0Zm14-1.46v-.61A5.21,5.21,0,0,0,19,19H13a5.2,5.2,0,0,0-5,5.31s0,0,0,0v.59a12,12,0,1,1,16,0Z"
                  />
                  <path
                    d="M16,7a5,5,0,1,0,5,5A5,5,0,0,0,16,7Zm0,8a3,3,0,1,1,3-3A3,3,0,0,1,16,15Z"
                  />
                </svg>
              </a>
              <ul
                aria-label="user"
                className="bx--header__menu"
                role="menu"
              >
                <li>
                  <div
                    className="bx--header__menu-item"
                    tabIndex={0}
                  >
                    <span
                      className="bx--text-truncate--end"
                    >
                      <div
                        className="iot--suite-header-profile"
                      >
                        <h5>
                          Profile
                        </h5>
                        <div
                          className="iot--suite-header-profile--user"
                        >
                          <div
                            className="iot--suite-header-profile--user--chip"
                          >
                            AU
                          </div>
                          <div
                            className="iot--suite-header-profile--user--detail"
                          >
                            <div>
                              <strong>
                                Admin User
                              </strong>
                            </div>
                            <div>
                              adminuser
                            </div>
                          </div>
                        </div>
                        <div
                          className="iot--suite-header-profile--manage-button"
                        >
                          <button
                            className="iot--btn bx--btn bx--btn--sm bx--btn--secondary"
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            Manage profile
                          </button>
                        </div>
                        <div
                          className="iot--suite-header-profile--logout"
                        >
                          <button
                            className="iot--btn bx--btn bx--btn--secondary"
                            disabled={false}
                            onClick={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            Log out
                          </button>
                        </div>
                      </div>
                    </span>
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="bx--header__submenu bx--header-action-btn action-btn__group"
            data-testid="action-btn__group"
            onBlur={[Function]}
            onKeyDown={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup="menu"
              aria-label="AppSwitcher"
              className="bx--header-action-btn action-btn__trigger bx--header__action"
              onClick={[Function]}
              title="AppSwitcher"
              type="button"
            >
              <svg
                aria-hidden={true}
                className="bx--header__menu-item bx--header__menu-title"
                fill="white"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14 4H18V8H14zM4 4H8V8H4zM24 4H28V8H24zM14 14H18V18H14zM4 14H8V18H4zM24 14H28V18H24zM14 24H18V28H14zM4 24H8V28H4zM24 24H28V28H24z"
                />
              </svg>
            </button>
            <div
              aria-label="Header Panel"
              className="bx--header-panel bx--app-switcher"
              data-testid="action-btn__panel"
              tabIndex="-1"
            >
              <ul
                aria-label="AppSwitcher"
              >
                <li
                  className="action-btn__headerpanel-li"
                >
                  <a
                    className="bx--app-switcher undefined"
                    element="a"
                  >
                    <ul
                      className="iot--suite-header-app-switcher"
                    >
                      <li
                        className="iot--suite-header-app-switcher--nav-link"
                      >
                        <a
                          href="https://www.ibm.com"
                        >
                          <svg
                            aria-hidden={true}
                            focusable="false"
                            height={16}
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.7 12.3L2.9 8.5 15 8.5 15 7.5 2.9 7.5 6.7 3.7 6 3 1 8 6 13z"
                            />
                          </svg>
                          All applications
                        </a>
                      </li>
                      <li
                        className="iot--suite-header-app-switcher--app-link"
                      >
                        <a
                          href="https://www.ibm.com"
                        >
                          Monitor
                        </a>
                      </li>
                      <li
                        className="iot--suite-header-app-switcher--app-link"
                      >
                        <a
                          href="https://www.ibm.com"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          Health
                        </a>
                      </li>
                    </ul>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </header>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/SuiteHeader Header with data hook 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="bx--modal bx--modal-tall"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="presentation"
      >
        <span
          className="bx--visually-hidden"
          role="link"
          tabIndex="0"
        >
          Focus sentinel
        </span>
        <div
          aria-label="Do you wish to log out?"
          aria-modal="true"
          className="bx--modal-container"
          role="dialog"
          tabIndex="-1"
        >
          <div
            className="bx--modal-header"
          >
            
            <h3
              className="bx--modal-header__heading"
              id="bx--modal-header__heading--modal-2"
            >
              Do you wish to log out?
            </h3>
            <button
              aria-label="Close"
              className="bx--modal-close"
              onClick={[Function]}
              title="Close"
              type="button"
            >
              <svg
                aria-label="Close"
                className="bx--modal-close__icon"
                focusable="false"
                height={20}
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 32 32"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
                />
              </svg>
            </button>
          </div>
          <div
            aria-labelledby="bx--modal-header__heading--modal-2"
            className="bx--modal-content"
          >
            You are logged in to undefined as undefined.  Logging out also logs you out of each application that is open in the same browser.  To ensure a secure log out, close all open browser windows.
          </div>
          <div
            className="bx--modal-footer"
          >
            <button
              className="bx--btn bx--btn--secondary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Cancel
            </button>
            <button
              className="bx--btn bx--btn--primary"
              disabled={false}
              onClick={[Function]}
              tabIndex={0}
              type="button"
            >
              Log out
            </button>
          </div>
        </div>
        <span
          className="bx--visually-hidden"
          role="link"
          tabIndex="0"
        >
          Focus sentinel
        </span>
      </div>
      <div>
        <header
          aria-label="main header"
          className="bx--header iot--suite-header"
        >
          <a
            className="bx--skip-to-content"
            href="#main-content"
            tabIndex="0"
          >
            Skip to main content
          </a>
          <a
            className="bx--header__name"
            href={null}
          >
            <span
              className="bx--header__name--prefix"
            >
              IBM
            </span>
             
            Application Suite
            <div
              className="iot--header__subtitle"
            >
              Application Name
            </div>
          </a>
          <div
            className="bx--header__global"
          >
            <div
              className="bx--header__submenu bx--header-action-btn action-btn__group"
              data-testid="action-btn__group"
              onBlur={[Function]}
              onKeyDown={[Function]}
            >
              <div
                className="bx--header__submenu bx--header-action-btn"
              >
                <a
                  aria-expanded={false}
                  aria-haspopup="menu"
                  aria-label="Help"
                  className="bx--header__menu-item bx--header__menu-title"
                  data-testid="menuitem"
                  href=""
                  onClick={[Function]}
                  role="menuitem"
                  tabIndex={0}
                >
                  <svg
                    aria-hidden={true}
                    description="Help"
                    fill="white"
                    focusable="false"
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <circle
                      cx="16"
                      cy="23.5"
                      r="1.5"
                    />
                    <path
                      d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"
                    />
                  </svg>
                </a>
                <ul
                  aria-label="Help"
                  className="bx--header__menu"
                  role="menu"
                >
                  <li>
                    <a
                      className="bx--header__menu-item"
                      tabIndex={0}
                      target="_blank"
                      title="What's new"
                    >
                      <span
                        className="bx--text-truncate--end"
                      >
                        What's new
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="bx--header__menu-item"
                      tabIndex={0}
                      target="_blank"
                      title="Getting started"
                    >
                      <span
                        className="bx--text-truncate--end"
                      >
                        Getting started
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="bx--header__menu-item"
                      tabIndex={0}
                      target="_blank"
                      title="Documentation"
                    >
                      <span
                        className="bx--text-truncate--end"
                      >
                        Documentation
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="bx--header__menu-item"
                      tabIndex={0}
                      target="_blank"
                      title="Request enhancement"
                    >
                      <span
                        className="bx--text-truncate--end"
                      >
                        Request enhancement
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="bx--header__menu-item"
                      tabIndex={0}
                      target="_blank"
                      title="Support"
                    >
                      <span
                        className="bx--text-truncate--end"
                      >
                        Support
                      </span>
                    </a>
                  </li>
                  <li>
                    <a
                      className="bx--header__menu-item"
                      tabIndex={0}
                      target="_self"
                      title="About"
                    >
                      <span
                        className="bx--text-truncate--end"
                      >
                        About
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div
              className="bx--header__submenu bx--header-action-btn action-btn__group"
              data-testid="action-btn__group"
              onBlur={[Function]}
              onKeyDown={[Function]}
            >
              <div
                className="bx--header__submenu bx--header-action-btn"
              >
                <a
                  aria-expanded={false}
                  aria-haspopup="menu"
                  aria-label="user"
                  className="bx--header__menu-item bx--header__menu-title"
                  data-testid="menuitem"
                  href=""
                  onClick={[Function]}
                  role="menuitem"
                  tabIndex={0}
                >
                  <svg
                    aria-hidden={true}
                    data-cy="userIcon"
                    description="User"
                    fill="white"
                    focusable="false"
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2ZM10,26.38v-2A3.22,3.22,0,0,1,13,21h6a3.22,3.22,0,0,1,3,3.39v2a11.92,11.92,0,0,1-12,0Zm14-1.46v-.61A5.21,5.21,0,0,0,19,19H13a5.2,5.2,0,0,0-5,5.31s0,0,0,0v.59a12,12,0,1,1,16,0Z"
                    />
                    <path
                      d="M16,7a5,5,0,1,0,5,5A5,5,0,0,0,16,7Zm0,8a3,3,0,1,1,3-3A3,3,0,0,1,16,15Z"
                    />
                  </svg>
                </a>
                <ul
                  aria-label="user"
                  className="bx--header__menu"
                  role="menu"
                >
                  <li>
                    <div
                      className="bx--header__menu-item"
                      tabIndex={0}
                    >
                      <span
                        className="bx--text-truncate--end"
                      >
                        <div
                          className="iot--suite-header-profile"
                        >
                          <h5>
                            Profile
                          </h5>
                          <div
                            className="iot--suite-header-profile--user"
                          >
                            <div
                              className="iot--suite-header-profile--user--chip"
                            />
                            <div
                              className="iot--suite-header-profile--user--detail"
                            >
                              <div>
                                <strong />
                              </div>
                              <div />
                            </div>
                          </div>
                          <div
                            className="iot--suite-header-profile--manage-button"
                          >
                            <button
                              className="iot--btn bx--btn bx--btn--sm bx--btn--secondary"
                              disabled={false}
                              onClick={[Function]}
                              tabIndex={0}
                              type="button"
                            >
                              Manage profile
                            </button>
                          </div>
                          <div
                            className="iot--suite-header-profile--logout"
                          >
                            <button
                              className="iot--btn bx--btn bx--btn--secondary"
                              disabled={false}
                              onClick={[Function]}
                              tabIndex={0}
                              type="button"
                            >
                              Log out
                            </button>
                          </div>
                        </div>
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
            <div
              className="bx--header__submenu bx--header-action-btn action-btn__group"
              data-testid="action-btn__group"
              onBlur={[Function]}
              onKeyDown={[Function]}
            >
              <button
                aria-expanded={false}
                aria-haspopup="menu"
                aria-label="AppSwitcher"
                className="bx--header-action-btn action-btn__trigger bx--header__action"
                onClick={[Function]}
                title="AppSwitcher"
                type="button"
              >
                <svg
                  aria-hidden={true}
                  className="bx--header__menu-item bx--header__menu-title"
                  fill="white"
                  focusable="false"
                  height={20}
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 4H18V8H14zM4 4H8V8H4zM24 4H28V8H24zM14 14H18V18H14zM4 14H8V18H4zM24 14H28V18H24zM14 24H18V28H14zM4 24H8V28H4zM24 24H28V28H24z"
                  />
                </svg>
              </button>
              <div
                aria-label="Header Panel"
                className="bx--header-panel bx--app-switcher"
                data-testid="action-btn__panel"
                tabIndex="-1"
              >
                <ul
                  aria-label="AppSwitcher"
                >
                  <li
                    className="action-btn__headerpanel-li"
                  >
                    <a
                      className="bx--app-switcher undefined"
                      element="a"
                    >
                      <ul
                        className="iot--suite-header-app-switcher"
                      >
                        <li
                          className="iot--suite-header-app-switcher--nav-link"
                        >
                          <a
                            href={null}
                          >
                            <svg
                              aria-hidden={true}
                              focusable="false"
                              height={16}
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 16 16"
                              width={16}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.7 12.3L2.9 8.5 15 8.5 15 7.5 2.9 7.5 6.7 3.7 6 3 1 8 6 13z"
                              />
                            </svg>
                            All applications
                          </a>
                        </li>
                        <div
                          className="iot--suite-header-app-switcher--no-app"
                        >
                          <div
                            className="bee-icon-container"
                          >
                            <svg
                              aria-hidden={true}
                              focusable="false"
                              height={32}
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width={32}
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
                              />
                            </svg>
                            <div
                              className="bee-shadow"
                            />
                          </div>
                          <span>
                            Contact your administrator to request application access
                          </span>
                          <a>
                            Learn more
                          </a>
                        </div>
                      </ul>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </header>
      </div>
      <br />
      <button
        className="iot--btn bx--btn bx--btn--primary bx--btn--disabled"
        disabled={true}
        onClick={[Function]}
        tabIndex={0}
        type="button"
      >
        <div
          aria-atomic="true"
          aria-labelledby="loading-id-6"
          aria-live="assertive"
          className="bx--loading bx--loading--small"
        >
          <label
            className="bx--visually-hidden"
            id="loading-id-6"
          >
            Active loading indicator
          </label>
          <svg
            className="bx--loading__svg"
            viewBox="-75 -75 150 150"
          >
            <title>
              Active loading indicator
            </title>
            <circle
              className="bx--loading__background"
              cx="0"
              cy="0"
              r="26.8125"
            />
            <circle
              className="bx--loading__stroke"
              cx="0"
              cy="0"
              r="26.8125"
            />
          </svg>
        </div>
        Refresh
      </button>
      <div
        className="bx--snippet bx--snippet--multi"
      >
        <div
          aria-label="code-snippet"
          className="bx--snippet-container"
          role={null}
          tabIndex={null}
        >
          <code>
            <pre>
              {
  "user": {},
  "workspaces": {},
  "eamConfig": {},
  "routes": {
    "profile": null,
    "navigator": null,
    "admin": null,
    "logout": null,
    "help": {
      "about": null,
      "documentation": null,
      "whatsNew": null,
      "requestEnhancement": null,
      "support": null,
      "gettingStarted": null
    },
    "applications": {}
  }
}
            </pre>
          </code>
        </div>
        <button
          aria-label="Copy to clipboard"
          aria-live="polite"
          className="bx--copy-btn"
          onAnimationEnd={[Function]}
          onClick={[Function]}
          title="Copy to clipboard"
          type="button"
        >
          <svg
            aria-hidden={true}
            className="bx--snippet__icon"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M28,10V28H10V10H28m0-2H10a2,2,0,0,0-2,2V28a2,2,0,0,0,2,2H28a2,2,0,0,0,2-2V10a2,2,0,0,0-2-2Z"
            />
            <path
              d="M4,18H2V4A2,2,0,0,1,4,2H18V4H4Z"
            />
          </svg>
          <span
            className="bx--assistive-text bx--copy-btn__feedback"
          >
            Copied!
          </span>
        </button>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/SuiteHeader Logout modal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="bx--modal bx--modal-tall is-visible"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onTransitionEnd={[Function]}
      role="presentation"
    >
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
      <div
        aria-label="Do you wish to log out?"
        aria-modal="true"
        className="bx--modal-container"
        role="dialog"
        tabIndex="-1"
      >
        <div
          className="bx--modal-header"
        >
          
          <h3
            className="bx--modal-header__heading"
            id="bx--modal-header__heading--modal-3"
          >
            Do you wish to log out?
          </h3>
          <button
            aria-label="Close"
            className="bx--modal-close"
            onClick={[Function]}
            title="Close"
            type="button"
          >
            <svg
              aria-label="Close"
              className="bx--modal-close__icon"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4 14.6 16 8 22.6 9.4 24 16 17.4 22.6 24 24 22.6 17.4 16 24 9.4z"
              />
            </svg>
          </button>
        </div>
        <div
          aria-labelledby="bx--modal-header__heading--modal-3"
          className="bx--modal-content"
        >
          You are logged in to Application Suite as Test User.  Logging out also logs you out of each application that is open in the same browser.  To ensure a secure log out, close all open browser windows.
        </div>
        <div
          className="bx--modal-footer"
        >
          <button
            className="bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Cancel
          </button>
          <button
            className="bx--btn bx--btn--primary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Log out
          </button>
        </div>
      </div>
      <span
        className="bx--visually-hidden"
        role="link"
        tabIndex="0"
      >
        Focus sentinel
      </span>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT/SuiteHeader Profile 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "15rem",
        }
      }
    >
      <div
        className="iot--suite-header-profile"
      >
        <h5>
          Profile
        </h5>
        <div
          className="iot--suite-header-profile--user"
        >
          <div
            className="iot--suite-header-profile--user--chip"
          >
            TU
          </div>
          <div
            className="iot--suite-header-profile--user--detail"
          >
            <div>
              <strong>
                Test User
              </strong>
            </div>
            <div>
              myuser
            </div>
          </div>
        </div>
        <div
          className="iot--suite-header-profile--manage-button"
        >
          <button
            className="iot--btn bx--btn bx--btn--sm bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Manage profile
          </button>
        </div>
        <div
          className="iot--suite-header-profile--logout"
        >
          <button
            className="iot--btn bx--btn bx--btn--secondary"
            disabled={false}
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            Log out
          </button>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
